examples/tactics/neg/LemmaArgs.fst.hints
[
  "\b’ÒC®\u0001V„Ò¶4cðÜ1i",
  [
    [
      "LemmaArgs.lemma_example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query", "assumption_Prims.HasEq_int",
        "refinement_interpretation_LemmaArgs_Tm_refine_f0496eb03f3fb51b5e4ca0d53ea58c01"
      ],
      0,
      "7ce85dd5e40999e6260ac99f5f7a2e37"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "e11cb6271e76c7d751ef6b971fef75dd"
    ],
    [
      "LemmaArgs.example1",
      2,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "5c9039d8a2ee6c29da13fc7d36b4b0fb"
    ]
  ]
]